Fix search icon changing at 400%
The DfE front end style used seems to set the icon colour for small screens for the state `:focus:hover`, which causes the icon to be unreadable. This change fixes that by ensuring the state is covered in our custom class `app-search__button`

--- a/DfE.FindInformationAcademiesTrusts/assets/sass/_components.scss
+++ b/DfE.FindInformationAcademiesTrusts/assets/sass/_components.scss
@@ -51,6 +51,12 @@
       border-color: #002644;
     }
   }
+
+  .app-search__button--blue:focus:hover {
+    .app-search__icon {
+      fill: govuk-colour("white");
+    }
+  }
 }
 
 .app-search-results-summary-list {
